Upgrade Lucene to a modern version